Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjBoolObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Number
        Boolean var
        var:SetValue(true)
        return var
    end
end